refactor: renamed test folder to static

--- a/static/keypad.html
+++ b/static/keypad.html
@@ -1,7 +1,7 @@
 <html lang="en">
 
 <head>
-    <title>VTT Keyboard Prototype</title>
+    <title>Mind Flayer Test App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.5/build/pure-min.css">
     <script src="https://kit.fontawesome.com/a2467c72a1.js" crossorigin="anonymous"></script>
